# agent-voir

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  DEV_SETUP.md  LICENSE  Makefile  README.md  SECURITY.md  go.work  go.work.sum
.github/: pull_request_template.md  release-quickstart.md  release_template.md
.github/ISSUE_TEMPLATE/: ai_coding_task.md  bug_report.md  config.yml  feature_request.md
config/: agentvoir.local.yaml
docs/: AI_CONTRIBUTION_POLICY.md  RELEASE.md  agent-quality-review.md  agent-voir-home.md  agents-sunsets.md  china-and-robots.md  data-analytics.md  development-roadmap.md  future-of-agents.md  live-proxy-flow-html-mock.html  meta-data.md  mobile-version.md  model-performance.md  multilingual-agents.md  non-llm-models.md  sdk-best-practices.md  voice-agents.md
scripts/: bootstrap-github-issues.sh  bootstrap-github-labels.sh  bootstrap.sh  check.sh  demo-budget-block.sh  demo-budget-status.sh  demo-fallback.sh  demo-live-dashboard.sh  demo-oidc.sh  demo-policy-denial.sh  demo-policy-simulate.sh  demo-rate-limit.sh  onebox-smoke.sh  onebox.sh  pack-onebox-bundle.sh  quickstart.sh  seed-demo.sh  seed-live-events.sh  test-migrations.sh  wait-for-onebox.sh
tools/agentvoir_local_bot/: .env.example  README.md  pyproject.toml
tools/agentvoir_local_bot/src/agentvoir_local_bot/: SETUP.md  __init__.py  __main__.py  agent_runner.py  config.py  cursor_bridge.py  git_ops.py  github_client.py  test_runner.py  worker.py
tools/agentvoir_local_bot/tests/: conftest.py  test_git_ops.py  test_github_client.py  test_worker_helpers.py
(+218 files in other folders)
