[project]
name = "agentvoir-local-bot"
version = "0.1.0"
description = "Local worker that polls GitHub for ai-code issues and runs a coding agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentVoir maintainers" }]
dependencies = [
  "cursor-sdk>=0.1.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-httpx>=0.30.0",
  "ruff>=0.5.0",
]

[project.scripts]
agentvoir-local-bot = "agentvoir_local_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
